# vortex-downloader

./: .gitignore  BUILD.md  DOWNLOAD_PROGRESS_FIX.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_CHECKLIST.md  README.md  TESTING_SUMMARY.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-and-test.yml
src/: App.refactored.example.tsx  App.tsx  README.md  index.css
src-tauri/: .taurignore  BUNDLED_EXECUTABLES.md  Cargo.toml  DEPENDENCY_CHECK.md  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  error_handler.rs  executable_manager.rs  lib.rs  main.rs  update_service.rs
src-tauri/src/download/: manager.rs  mod.rs  task.rs  throttle.rs
src-tauri/src/platform/: cache.rs  mod.rs  provider.rs  registry.rs  youtube.rs
src-tauri/src/storage/: mod.rs  service.rs  settings.rs
src-tauri/tests/: DOWNLOAD_FIX_TESTING.md  README.md  dependency_check_test.rs  error_handling_test.rs  integration_queue_test.rs  integration_settings_test.rs  integration_youtube_test.rs  platform_registry_test.rs  storage_service_test.rs
src/api/: tauri.ts
src/components/: DownloadQueuePanel.tsx  ErrorDetailsModal.tsx  LoadingSpinner.tsx  SettingsPanel.tsx  SkeletonLoader.tsx  SuccessFeedback.tsx  Toast.tsx  ToastContainer.tsx  URLInputPanel.tsx  VideoPreviewPanel.tsx  WELCOME_WIZARD_README.md  WelcomeWizard.tsx
src/hooks/: index.ts  useAppInitialization.ts  useContentFetcher.ts  useDownloadQueue.ts  useSettings.ts  useToast.ts
src/stores/: IMPLEMENTATION_SUMMARY.md  README.md  downloadStore.ts  index.ts  settingsStore.ts  uiStore.ts
(+9 files in other folders)
